cka-definition-files/event-simulator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: event-simulator-pod
spec:
  containers:
  - name: event-simulator
    image: kodekloud/event-simulator # Docker image simulator
  - name: image-processor
    image: some-image-processor  # multiple logs processing images
