cka-definition-files/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
    name: nginx
    labels:
        app: nginx
        tier: frontend
spec:
   containers:
     - name: nginx
       image: nginx
