cka-definition-files/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
  volumes:
    - name: mypd
      hostPath:
         path: /var/log/webapp
         type: Directory
      persistentVolumeClaim:
        claimName: myclaim
