cka-definition-files/replicaset.yaml
apiVersion: apps/v1
kind: Pod
metadata: 
    name: myapp-rc
    labels: front-end
spec: 
    tamplate:
       metadata: 
          name: nginx
          labels:
                app: nginx
                tier: frontend
        spec:
           containers:
              - name: nginx
                image: nginx
 
    replicas: 3
    selector: 
        tier: front-end
